2010-03-25 Rodrigo Kumpera  <rkumpera@novell.com>

	* AssemblyBuilder.cs: Implement v4 GetType.

2010-03-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* MethodOnTypeBuilderInst.cs (ContainsGenericParameters): Check
	the base_method first.

2010-03-16  Jb Evain  <jbevain@novell.com>

	* AssemblyBuilder.cs, ModuleBuilder.cs: use MOONLIGHT symbol to
	disambiguate MonoTouch and Moonlight code.

2010-03-12  Jb Evain  <jbevain@novell.com>

	* AssemblyBuilder.cs (AddTypeForwarder): throw if the
	type is a nested type.

2010-03-11 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetMethod): Allow type to be the typebuilder itself.
	Add better error checking to GetConstructor and GetField.

	Fixes #587106.

2010-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ModuleBuilder.cs: Do not use reflection to create SymbolWriterImpl
	for Moonlight since the code is bundled inside mscorlib.dll to avoid
	having a non-platform assembly poking the internals of mscorlib.dll

2010-01-30  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeBuilder.cs (Initialize): Add more argument checking to avoid
	assertions in the runtime. Fixes #574353.

2010-01-19 Rodrigo Kumpera  <rkumpera@novell.com>

	* EventOnTypeBuilderInst.cs: Fix build.

2010-01-03  Zoltan Varga  <vargaz@gmail.com>

	* ILGenerator.cs (Emit): Disallow byref types. Fixes #564411.

2009-12-16 Rodrigo Kumpera  <rkumpera@novell.com>

	* FieldOnTypeBuilderInst.cs: Add more CompilerContext hacks.

2009-12-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeBuilder.cs (GetConstructor/GetMethod): Fail with a NRE if method/ctor
	is null.

2009-12-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* AssemblyBuilder.cs (MakeGenericType): Accept a Type as argument.

	* ConstructorOnTypeBuilderInst.cs: Change it to support an underlying
	non-sre constructor.

	* MethodOnTypeBuilderInst.cs: Change it to support an underlying
	non-sre method.

	* FieldOnTypeBuilderInst.cs: Change it to support an underlying
	non-sre field.
